--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "vercel-build": "echo 'Server is ready for Vercel deployment'"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
-  "description": "Express API deployed as a serverless function on Vercel",
+  "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.750.0",
     "axios": "^1.7.7",
@@ -20,7 +21,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "nodemon": "^3.1.7"
   },
   "engines": {
     "node": "20.x",
