--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
          "dest": "/",
           "methods": ["GET","POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
           "headers": {
-             "Access-Control-Allow-Origin": "https://reez.uk",
+             "Access-Control-Allow-Origin": "https://tapster.shop",
              "Access-Control-Allow-Credentials": "true",
              "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
          }
